# const-builder

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: const_builder_impl.rs  custom_impl_impl.rs  lib.rs  model.rs  util.rs
src/const_builder_impl/: base.rs  drop.rs  fields.rs  traits.rs  unchecked.rs
tests/: compile_shadowed.rs  miri.rs  no_std.rs  works.rs
