[package]
name = "const-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "Derive macro for const-compatible compile-time checked builders."
license = "MIT"
repository = "https://github.com/DPlayer234/const-builder"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["builder", "const", "derive", "no_std"]

exclude = [".vscode/*"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
