[package]
name = "const-builder"
version = "0.1.7"
edition = "2024"
rust-version = "1.88"

description = "Derive macro for const-compatible compile-time checked builders."
license = "MIT"
repository = "https://github.com/DPlayer234/const-builder"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["builder", "const", "derive", "no_std"]
exclude = [".vscode/*", ".github/*", "rustfmt.toml"]

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
